# chat-file

./: .gitignore  README.md  pyproject.toml  start.sh  test_document.md
backend/: main.py
backend/api/: endpoints.py
backend/core/: exceptions.py  logging.py  settings.py  state.py
backend/services/: chat_service.py  file_service.py
chat_file.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: app.py
roadmap/: initialization_20251223.md
