[project]
name = "chat-file"
version = "0.1.0"
description = "An AI agent project for analyzing files using FastAPI and Streamlit."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "langchain==0.3.12",
    "langchain-community==0.3.12",
    "langchain-core==0.3.25",
    "langchain-openai>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers",
    "openai",
    "tiktoken",
    "chromadb",
    "langchain-chroma",
    "pypdf",
    "pandas",
    "openpyxl",
    "langchain-experimental",
    "tabulate"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "frontend"]
